force-app/main/default/objects/Droid__c/Droid__c.object-meta.xml
<CustomObject>
    <label>Droid</label>
    <nameField>
        <label>Droid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Droids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>