force-app/main/default/objects/Droid__c/fields/Military_Grade__c.field-meta.xml
<CustomField>
    <fullName>Military_Grade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military Grade</label>
    <type>Checkbox</type>
</CustomField>