force-app/main/default/objects/Droid__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Droids</relationshipLabel>
    <relationshipName>Droids</relationshipName>
    <type>Lookup</type>
</CustomField>